<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>fish.payara.samples</groupId>
    <artifactId>payara-samples-profiled-tests</artifactId>
    <version>7.2025.1.Alpha5-SNAPSHOT</version>
  </parent>

  <artifactId>data</artifactId>
  <name>Payara Samples - Data (Arquillian/H2)</name>
  <packaging>jar</packaging>

  <properties>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <jakarta.data.version>1.0.1</jakarta.data.version>
    <jakarta.persistence.version>3.2.0</jakarta.persistence.version>

    <junit.jupiter.version>5.10.2</junit.jupiter.version>
    <arquillian.version>1.7.0.Final</arquillian.version>
    <shrinkwrap.version>1.2.6</shrinkwrap.version>
    <!-- Use resolver to pull test libs (e.g., H2) into the deployment archive -->
    <shrinkwrap.resolver.version>3.1.4</shrinkwrap.resolver.version>

    <h2.version>2.2.224</h2.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- Align Arquillian components -->
      <dependency>
        <groupId>org.jboss.arquillian</groupId>
        <artifactId>arquillian-bom</artifactId>
        <version>${arquillian.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <!-- Align ShrinkWrap core -->
      <dependency>
        <groupId>org.jboss.shrinkwrap</groupId>
        <artifactId>shrinkwrap-bom</artifactId>
        <version>${shrinkwrap.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <!-- Align ShrinkWrap Maven Resolver -->
      <dependency>
        <groupId>org.jboss.shrinkwrap.resolver</groupId>
        <artifactId>shrinkwrap-resolver-bom</artifactId>
        <version>${shrinkwrap.resolver.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <!-- Jakarta Data API: provided by the container/provider; not packaged in WAR -->
    <dependency>
      <groupId>jakarta.data</groupId>
      <artifactId>jakarta.data-api</artifactId>
      <version>${jakarta.data.version}</version>
      <scope>provided</scope>
    </dependency>

    <!-- JPA API: provided by the container -->
    <dependency>
      <groupId>jakarta.persistence</groupId>
      <artifactId>jakarta.persistence-api</artifactId>
      <version>${jakarta.persistence.version}</version>
      <scope>provided</scope>
    </dependency>

    <!-- JUnit 5 -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit.jupiter.version}</version>
      <scope>test</scope>
    </dependency>

    <!-- Arquillian JUnit 4 integration (mais estável) -->
    <dependency>
      <groupId>org.jboss.arquillian.junit</groupId>
      <artifactId>arquillian-junit-container</artifactId>
      <scope>test</scope>
    </dependency>

    <!-- JUnit 4 para compatibilidade com Arquillian -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>

    <!-- ShrinkWrap core for @Deployment -->
    <dependency>
      <groupId>org.jboss.shrinkwrap</groupId>
      <artifactId>shrinkwrap-api</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.jboss.shrinkwrap</groupId>
      <artifactId>shrinkwrap-impl-base</artifactId>
      <scope>test</scope>
    </dependency>

    <!-- ShrinkWrap Maven Resolver (to add H2 and other libs into the deployment) -->
    <dependency>
      <groupId>org.jboss.shrinkwrap.resolver</groupId>
      <artifactId>shrinkwrap-resolver-api-maven</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.jboss.shrinkwrap.resolver</groupId>
      <artifactId>shrinkwrap-resolver-impl-maven</artifactId>
      <scope>test</scope>
    </dependency>

    <!-- H2 driver: available at test time; include via ShrinkWrap into the WAR when needed -->
    <dependency>
      <groupId>com.h2database</groupId>
      <artifactId>h2</artifactId>
      <version>${h2.version}</version>
      <scope>test</scope>
    </dependency>

    <!-- EclipseLink JPA Provider for testing -->
    <dependency>
      <groupId>org.eclipse.persistence</groupId>
      <artifactId>eclipselink</artifactId>
      <version>4.0.4</version>
      <scope>test</scope>
    </dependency>

  </dependencies>

  <build>
    <plugins>
      <!-- Surefire configured for JUnit 4 + Arquillian -->
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.5</version>
        <configuration>
          <useModulePath>false</useModulePath>
          <includes>
            <include>**/*Test.java</include>
            <include>**/*Tests.java</include>
          </includes>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.apache.maven.surefire</groupId>
            <artifactId>surefire-junit4</artifactId>
            <version>3.2.5</version>
          </dependency>
        </dependencies>
      </plugin>
    </plugins>
  </build>
</project>